--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     compile('org.springframework.data:spring-data-rest-hal-browser')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-devtools')
+    compile 'com.google.api-client:google-api-client:1.21.0'
+    compile 'com.google.oauth-client:google-oauth-client-jetty:1.21.0'
+    compile 'com.google.apis:google-api-services-calendar:v3-rev125-1.20.0'
     runtime('com.h2database:h2')
     testCompile('org.springframework.boot:spring-boot-starter-test') 
 }
